syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.stanford.futuredata.uniserve";
option java_outer_classname = "CoordinatorDataStoreProto";

package coordinatordatastore;

// Communication from coordinator to the datastores.
service CoordinatorDataStore {
    // Create a new shard on a datastore.
    rpc createNewShard (CreateNewShardMessage) returns (CreateNewShardResponse) {}
    // Load a replica shard on a datastore.
    rpc loadShardReplica (LoadShardReplicaMessage) returns (LoadShardReplicaResponse) {}
    // Ping a datastore to see if it's alive.
    rpc CoordinatorPing (CoordinatorPingMessage) returns (CoordinatorPingResponse) {}
}

message CreateNewShardMessage {
    int32 shard = 1;
}

message CreateNewShardResponse {
    int32 returnCode = 1;
}

message LoadShardReplicaMessage {
    int32 shard = 1;
}

message LoadShardReplicaResponse {
    int32 returnCode = 1;
}

message CoordinatorPingMessage {}

message CoordinatorPingResponse {}